# gateway

./: .gitignore  CMakeLists.txt  README.md  config-trim.json  config.json  gateway  log.txt
asa/: sa-hub-to-blob  sa-hub-to-docdb  sa-hub-to-pbi
filter/: filter.js  package.json
modules/: aggregate.js  api.js  batch.js  filter.js  iothub.js  package.json  printer.js  sensor.js  simulated-device.js  util.js
nodejs_modules/: aggregate.js
src/: config.json  main.c
